--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 	<meta name="msapplication-TileImage" content="ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 
-	<link class="prod" href="css/style.css?v=1211" type="text/css" rel="stylesheet" />
+	<link class="prod" href="css/style.css?v=1428" type="text/css" rel="stylesheet" />
 	<script src="js/pace.min.js"></script>
-	<script class="prod" src="js/script.js?v=1211"></script>
+	<script class="prod" src="js/script.js?v=1428"></script>
 	<!-- Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -187,7 +187,7 @@
 									<blockquote class="fade-up">
 										<p>&laquo;Для работы спасателем нет никаких ограничений в&nbsp;плане пород. Есть просто целесообразность: какая порода для какой службы подходит. Например, ньюфаундленд&nbsp;&mdash; прекрасный, но&nbsp;тяжелый, массивный, огромный, медленный. Ему сложно работать на&nbsp;завале. Или такса: она просто физически не&nbsp;может перелезть через завал&nbsp;&mdash; тело длинное, лапки короткие. Так что обычно в&nbsp;поисково-спасательный отряд попадают собаки среднего роста&nbsp;&mdash; от&nbsp;40&nbsp;до&nbsp;55-60&nbsp;см&nbsp;&mdash; и&nbsp;весом от&nbsp;10&nbsp;до&nbsp;30&nbsp;кг. Собаке должно быть удобно двигаться, лазить, прыгать, перелезать через препятствия&raquo;.</p>
 										<p class="blockquote-name">Виктория Васильева </p>
-										<p class="blockquote-job">кинолог, спасатель (Государственное казенное учреждение&nbsp;г. Москвы &laquo;Пожарно-спасательный центр&raquo;, аварийно-спасательный отряд &#8470;&nbsp;6, кинологическая группа)</p>
+										<p class="blockquote-job">кинолог, спасатель (Государственное казенное учреждение&nbsp;г.&nbsp;Москвы &laquo;Пожарно-спасательный центр&raquo;, аварийно-спасательный отряд &#8470;&nbsp;6, кинологическая группа)</p>
 									</blockquote>
 
 
@@ -249,7 +249,7 @@
 									<blockquote class="fade-up">
 										<p>&laquo;Породу хозяин выбирает для себя. Основная масса&nbsp;&mdash; это различного вида овчарки и&nbsp;ретриверы. А&nbsp;так&nbsp;&mdash; работают с&nbsp;разными породами, иногда довольно специфическими. У&nbsp;нас все собаки личные&nbsp;&mdash; отдежурили смену, загружаемся в&nbsp;машину, едем домой. Через два дня опять заступать на&nbsp;дежурство&nbsp;&mdash; грузимся в&nbsp;машину, едем на&nbsp;работу&raquo;.</p>
 										<p class="blockquote-name">Виктория Васильева </p>
-										<p class="blockquote-job">кинолог, спасатель (Государственное казенное учреждение&nbsp;г. Москвы &laquo;Пожарно-спасательный центр&raquo;, аварийно-спасательный отряд &#8470;&nbsp;6, кинологическая группа)</p>
+										<p class="blockquote-job">кинолог, спасатель (Государственное казенное учреждение&nbsp;г.&nbsp;Москвы &laquo;Пожарно-спасательный центр&raquo;, аварийно-спасательный отряд &#8470;&nbsp;6, кинологическая группа)</p>
 									</blockquote>
 
 
@@ -463,7 +463,7 @@
 									<blockquote class="fade-up">
 										<p>&laquo;Любой человек дышит: вдыхает кислород, выдыхает углекислый газ. От&nbsp;любого человека идут испарения, остаются потожировые следы, у&nbsp;всех слышно сердцебиение. Когда мы&nbsp;изначально приучаем собаку к&nbsp;тому, что любой человек для нее друг, брат и&nbsp;источник наслаждения, то, учуяв живого человека, она к&nbsp;нему бежит. Для того чтобы собака не&nbsp;зацикливалась на&nbsp;ком-то одном, мы&nbsp;знакомим ее&nbsp;с&nbsp;максимальным количеством людей. Так у&nbsp;собаки вырабатывается стереотип, что любой человек, который дышит, от&nbsp;которого пахнет, у&nbsp;которого бьется сердце,&nbsp;&mdash; для нее лучший товарищ&raquo;.</p>
 										<p class="blockquote-name">Виктория Васильева</p>
-										<p class="blockquote-job">кинолог, спасатель (Государственное казенное учреждение&nbsp;г. Москвы &laquo;Пожарно-спасательный центр&raquo;, аварийно-спасательный отряд &#8470;&nbsp;6, кинологическая группа)</p>
+										<p class="blockquote-job">кинолог, спасатель (Государственное казенное учреждение&nbsp;г.&nbsp;Москвы &laquo;Пожарно-спасательный центр&raquo;, аварийно-спасательный отряд &#8470;&nbsp;6, кинологическая группа)</p>
 									</blockquote>
 		
 									<div class="slider-fullscreen ">
@@ -646,7 +646,7 @@
 									<blockquote class="fade-up">
 										<p>&laquo;Поощрять собаку нужно обязательно. Потому что если собака сегодня походила и&nbsp;никого не&nbsp;нашла, завтра то&nbsp;же самое, послезавтра мы&nbsp;ее&nbsp;ничем не&nbsp;поощряем, не&nbsp;имитируем находку, то&nbsp;в&nbsp;итоге она перестанет искать. Собака&nbsp;&mdash; не&nbsp;альтруист, она не&nbsp;работает за&nbsp;идею. У&nbsp;нее всегда должно возникать ощущение, что она делает все правильно&raquo;.	</p>
 										<p class="blockquote-name">Виктория Васильева</p>
-										<p class="blockquote-job">кинолог, спасатель (Государственное казенное учреждение&nbsp;г. Москвы &laquo;Пожарно-спасательный центр&raquo;, аварийно-спасательный отряд &#8470;&nbsp;6, кинологическая группа)</p>
+										<p class="blockquote-job">кинолог, спасатель (Государственное казенное учреждение&nbsp;г.&nbsp;Москвы &laquo;Пожарно-спасательный центр&raquo;, аварийно-спасательный отряд &#8470;&nbsp;6, кинологическая группа)</p>
 									</blockquote>
 
 									<div class="soc-btns">
@@ -988,7 +988,7 @@
 									<div id="infogr2">
 										<div class="infogr2-left">
 											<div class="img-wrap ">
-												<a class="prod-link" data-title="adult_active" href="https://www.purina-dogchow.ru/products/lifestyle/adult-active"><img class="pack fade-up" src="img/korm1.png" alt="purina dog chow"></a>
+												<a class="prod-link" target="_blank" data-title="adult_active" href="https://www.purina-dogchow.ru/products/lifestyle/adult-active"><img class="pack fade-up" src="img/korm1.png" alt="purina dog chow"></a>
 											</div>
 											<p class="orange fade-up">Также в&nbsp;ассортименте есть рационы для щенков и&nbsp;взрослых собак различного размера и&nbsp;с&nbsp;разными потребностями.</p>
 											<div class="img-wrap">
@@ -1012,7 +1012,7 @@
 										<div class="infogr2-right">
 											<div class="infogr2-right-item fade-up">
 												<p class="title"><span class="orange">Содержит:</span></p>
-												<p>натуральные ингредиенты, природные пребиотики, белки высокого качества, полезные жиры, аминокислоты, антиоксиданты</p>
+												<p>натуральные ингредиенты, природный пребиотик, белки высокого качества, полезные жиры, аминокислоты, антиоксиданты</p>
 												<p class="title"><span class="orange">Не&nbsp;содержит:</span></p class="title">
 												<p>искусственные красители, ароматизаторы, консерванты</p>
 											</div>
