--- a/3/index.html
+++ b/3/index.html
@@ -38,9 +38,9 @@
 	<meta name="msapplication-TileImage" content="ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 
-	<link class="prod" href="../css/style.css?v=1430" type="text/css" rel="stylesheet" />
+	<link class="prod" href="../css/style.css?v=2002" type="text/css" rel="stylesheet" />
 	<script src="../js/pace.min.js"></script>
-	<script class="prod" src="../js/script.js?v=1430"></script>
+	<script class="prod" src="../js/script.js?v=2002"></script>
 	<!-- Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -500,7 +500,7 @@
 									<blockquote class="gray fade-up">
 										<h5>Вера Лебедина и&nbsp;собака Тера</h5>
 										<p>&laquo;В&nbsp;сентябре 2018 года в&nbsp;лесу потерялся 91-летний ветеран войны. Он&nbsp;вышел из&nbsp;дома в&nbsp;тапочках, чтобы на&nbsp;краю леса просто выбросить яблочные очистки. И&nbsp;пропал. Было ясно, что дедушка не&nbsp;мог уйти далеко из-за состояния здоровья и&nbsp;неподходящей обуви. Но&nbsp;люди уходили и&nbsp;уходили в&nbsp;лес на&nbsp;его поиски, а&nbsp;результата не&nbsp;было. Группой спасателей были найдены одиночные следы человека с&nbsp;палкой, но&nbsp;проследить направление движения по&nbsp;ним не&nbsp;удалось.</p>
-										<p>Утром следующего дня на&nbsp;поиски приехали мы&nbsp;с&nbsp;Терой. Я&nbsp;пошла проверять поле, возле которого были найдены следы. И&nbsp;через какое-то время мы&nbsp;заметили палку пропавшего. А&nbsp;еще через пять минут обнаружили. От&nbsp;палки к&nbsp;ее&nbsp;хозяину вывела Тера. Дедушку спасли!&raquo;</p>
+										<p>Утром следующего дня на&nbsp;поиски приехали мы&nbsp;с&nbsp;Терой. Я&nbsp;пошла проверять поле, возле которого были найдены следы. И&nbsp;через какое-то время мы&nbsp;заметили палку пропавшего. А&nbsp;еще через пять минут обнаружили дедушку. От&nbsp;палки к&nbsp;ее&nbsp;хозяину вывела Тера. Дедушку спасли!&raquo;</p>
 									</blockquote>
 
 
