много мелких правок

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 	<meta name="msapplication-TileImage" content="ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 
-	<link class="prod" href="css/style.css?v=2002" type="text/css" rel="stylesheet" />
+	<link class="prod" href="css/style.css?v=2502" type="text/css" rel="stylesheet" />
 	<script src="js/pace.min.js"></script>
-	<script class="prod" src="js/script.js?v=2002"></script>
+	<script class="prod" src="js/script.js?v=2502"></script>
 	<!-- Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -47,7 +47,7 @@
 	<!-- End Google Tag Manager -->
 	
 </head>
-<body class="firstload main" data-slide="1">
+<body class="firstload main" data-slide="1" data-prevpage="0">
 	<!-- Google Tag Manager (noscript) -->
 	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PV4QKRH"
 	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -590,7 +590,7 @@
 									
 									<div class="h2-wrap">
 										<h2>Рабочий день <br>собаки-спасателя</h2>
-										<svg class="h2-svg" preserveAspectRatio="xMinYMid slice" fill-rule="evenodd" stroke-miterlimit="2" clip-rule="evenodd" xmlns="http://www.w3.org/2000/svg" width="100%" viewBox="0 0 700 200">
+										<svg class="h2-svg" preserveAspectRatio="xMinYMid slice" fill-rule="evenodd" stroke-miterlimit="2" clip-rule="evenodd" xmlns="http://www.w3.org/2000/svg" width="100%" viewBox="0 -4 700 200">
 											<defs>
 												<mask id="hole3">
 													<rect width="100%" height="100%" fill="white"></rect>
@@ -598,14 +598,14 @@
 												</mask>
 											</defs>
 											<g fill="#FFF" fill-opacity="0" stroke="#979797" stroke-width="1.2285" style="font-family:'DrukTextWideCyr-Heavy','Arial';font-weight:700;font-size:56.76px;">
-												<text x="0" y="53">РАБОЧИЙ ДЕНЬ</text>
-												<text x="0" y="112">СОБАКИ-</text>
-												<text x="0" y="171">СПАСАТЕЛЯ</text>
+												<text x="0" y="57">РАБОЧИЙ ДЕНЬ</text>
+												<text x="0" y="116">СОБАКИ-</text>
+												<text x="0" y="175">СПАСАТЕЛЯ</text>
 											</g>
 											<g mask="url(#hole3)" fill="#FFF" stroke="#fff" stroke-width="1.2285" style="font-family:'DrukTextWideCyr-Heavy','Arial';font-weight:700;font-size:56.76px;">
-												<text x="0" y="53">РАБОЧИЙ ДЕНЬ</text>
-												<text x="0" y="112">СОБАКИ-</text>
-												<text x="0" y="171">СПАСАТЕЛЯ</text>
+												<text x="0" y="57">РАБОЧИЙ ДЕНЬ</text>
+												<text x="0" y="116">СОБАКИ-</text>
+												<text x="0" y="175">СПАСАТЕЛЯ</text>
 											</g>
 										</svg>
 									</div>
